--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Vite + React + TS</title>
+    <title>My Little Blog</title>
   </head>
   <body>
     <div id="root"></div>
